# AutoClad

./: .gitignore  CMakeLists.txt  README.md  justfile  randomize_scenarios.py
.helix/: languages.toml
AutoClad/: card_game_model.pth  data_parser.py  main.py  neural_agent.py  neural_model.py  pyproject.toml  scaler_params.json  state_converter.py
apps/: battle-agent.cpp  test.cpp
battle/: Actions2.cpp  BattleContext2.cpp  BattleContext2.h  CardInstance2.cpp  CardQueue2.h  Deck2.cpp  Monster2.cpp  MonsterGroup2.cpp  MonsterGroup2.h  MonsterMoveDamage2.cpp  MonsterSpecific2.cpp  Player2.h
battle/agents/: AutoClad.h  SimpleAgent2.cpp  SimpleAgent2.h
battle/include/: Action2.h  Actions2.h  AutoClad.h  BattleContext2.h  CardManager2.h  NeuralNetAgent.h  SimpleAgent2.h
battle/src/: Action2.cpp  AutoClad.cpp  CardInstance2.cpp  CardQueue2.cpp  NeuralNetAgent.cpp  Player2.cpp  SimpleAgent2.cpp
data/: scenarios-from-runs.py
data/2019-runs-json-ironclad/: 1547580972.json  1549667036.json  1549753781.json  1549950982.json  1552593931.json  1552694413.json  1553891485.json  1554939498.json
data/agent_battles/: SimpleAgent_vs_Blue Slaver_10616636939857054021.snap  SimpleAgent_vs_Cultist_10448332194052148378.snap  SimpleAgent_vs_Gremlin Nob_7244678248054073170.snap  SimpleAgent_vs_Jaw Worm_16978076956793254264.snap  SimpleAgent_vs_Two Fungi Beasts_14281576318794427246.snap  SimpleAgent_vs_Two Louse_10448332194052148378.snap
include/combat/: Player.h
include/utils/: scenarios.h
